--- a/Zootopia.css
+++ b/Zootopia.css
@@ -28,8 +28,9 @@ a {
 	background:white;
 	color:black;
 	float:right;
-	width:60%;
+	width:55%;
 	height:100%;
+	font-size:78%;
 }
 .what {
 	font-size:150%;
